TheKabal (29 June 2014)
--------------------------------------
Added session regeneration method - $bnt_session->regen that plays nicely with our db-driven sessions
Sessions now correctly expire after create_time + maxlifetime (currently at 30 mins)

TheKabal (24 June 2014)
--------------------------------------
Database driven sessions return - now PDO powered. More functionality to come, but it is entirely functional now.

TheKabal (23 June 2014)
--------------------------------------
Add DB-driven session class - not yet hooked up, still work to be done.

TheKabal (21 June 2014)
--------------------------------------
Split presets out into its own table, increase default max preset count to five

TheKabal (11 June 2014)
--------------------------------------
Fixes for cookie handling
Redo direct file access protection - to not use includes.

TheKabal (8 June 2014)
--------------------------------------
Setup info has been rewritten to use templates, add additional tests, improve html compliance, etc.

TheKabal (2 June 2014)
--------------------------------------
Continued cleanup based on PSR standards, correct space before functions formatting, indention, php statement on its own line, etc.

TheKabal (25 May 2014)
--------------------------------------
Add namespaces to class files, move class files to correct names, correct space before functions formatting
Fix variable order for Player::Kill
Update composer itself, and Smarty to latest version

TheKabal (16 May 2014)
--------------------------------------
Assorted fixes for variable naming, to be consistently camelCaps styled.

TheKabal (11 May 2014)
--------------------------------------
Change "HandleFuelScoop" to BntMove::calcFuelScooped, in classes directory
Move database configuration include from global includes to inside the database class & init method itself. And then there were three (global_includes left)..
Switch all functions out of Planet report ce, and into BadPlanetReportCE class